--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "proxy",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "private": true,
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6",
+    "http-proxy-middleware": "^2.0.6"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
